Fix button alignment

--- a/css/index.css
+++ b/css/index.css
@@ -12,12 +12,12 @@ span {
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
-  padding: 35px 0;
-  width: 29em;
+  padding: 40px 0 20px 0;
+  width: 405px;
 }
 
 .screen-container {
-  margin: 0 10%;
+  margin: 0 5%;
   text-align: right;
 }
 
@@ -25,12 +25,12 @@ span {
   color: white;
   font-family: sans-serif;
   font-size: 80px;
-  margin: 0 2.5%;
+  margin-right: 8px;
   overflow: scroll;
 }
 
 .buttons-container {
-  margin: 0 10%;
+  margin: 0 5%;
   text-align: center;
 }
 
@@ -40,7 +40,7 @@ span {
   display: inline-block;
   font-size: 45px;
   height: 80px;
-  margin: 4px;
+  margin: 4px 2px;
   padding-top: 10px;
   width: 80px;
 }
@@ -69,7 +69,7 @@ span {
   background: #d9d7d7;
   border-radius: 100px;
   color: black;
-  width: 264px;
+  width: 255px;
 }
 
 .clear:active {
@@ -78,5 +78,5 @@ span {
 
 .zero {
   border-radius: 100px;
-  width: 176px;
+  width: 167px;
 }
